2008-03-02  Mirco Bauer <meebey@meebey.net> 

	* Protocols/ProtocolManagerBase.cs: Fixed parsing of URLs.

2008-01-31  Mirco Bauer <meebey@meebey.net> 

	* Session.cs, FrontendManager.cs: Deregister the FrontendManager by using
	  the FrontendManager instance instead of the remoting URI which caused an
	  unhandled exception. The the UI object is usually unusable in that stage
	  (the frontend is disconnected), this fixes the crash bug with Mono 1.2.6
	  after a frontend disconnects.
	* AssemblyInfo.cs: Bumped version to 0.5.30.

2007-12-25  Mirco Bauer <meebey@meebey.net> 

	* Engine.mdp: Updated using MonoDevelop 0.18.1
