@@ -1,5 +1,10 @@
 2008-03-02  Mirco Bauer <meebey@meebey.net> 
 
+	* Protocols/ProtocolManagerBase.cs: Fixed highlight, formatting and colors
+	  of messages that contain URLs.
+
+2008-03-02  Mirco Bauer <meebey@meebey.net> 
+
 	* Protocols/ProtocolManagerBase.cs: Fixed parsing of URLs.
 
 2008-01-31  Mirco Bauer <meebey@meebey.net> 
